# isletme-yonetimi

./: .gitattributes  .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2870002bd15f_add_coupons_table.py  69da4ff82cac_add_kitchen_status.py  964e1fe9cef4_add_modifiers.py  a1b2c3d4e5f6_add_platform_admins.py  b2c3d4e5f6a7_add_waiter_calls.py  de815686af5e_add_service_charge_to_orders.py  e39f415ef1d1_add_menu_category_and_item.py  eab90ef38625_initial_restaurants_and_users.py  efcf53657847_add_tables_orders_payments.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  auth.py  coupons.py  kds.py  (+7 more)
backend/app/core/: config.py  db.py  features.py  security.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  base.py  coupon.py  menu.py  modifier.py  order.py  payment.py  platform_admin.py  restaurant.py  table.py  user.py  waiter_call.py
backend/app/realtime/: __init__.py  hub.py
backend/app/schemas/: admin.py  auth.py  coupon.py  dashboard.py  kds.py  menu.py  modifier.py  order.py  public.py  restaurant.py  table.py  user.py  waiter.py
backend/app/scripts/: create_admin.py
backend/app/services/: admin_service.py  auth_service.py  coupon_service.py  fiscal.py  kds_service.py  modifier_service.py  order_service.py  waiter_service.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_coupons.py  test_modifiers.py  test_orders.py
(+47 files in other folders)
